--- a/studio/templates/studio/base.html
+++ b/studio/templates/studio/base.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+      <meta name="google-site-verification" content="bsUCyfYYhdNcBqq2-39-T7E2hTtyuTYfdFBAdTFwUrA" />
+    <title>Gaming Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Gaming Studio{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
